fix selection and spacing styling to comply with the new components

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,7 @@
   --clr-dark-light: #555555;
   /* hsl(0,0,3) */
   --clr-light: #e5e5e5;
+  --clr-lighter: #f5f5f5;
   /* hsl(0, 0, 85) */
   --clr-green: #0F9D58;
   /*hsl(151, 83, 34) */
@@ -39,6 +40,7 @@
   --menu-height: 72px;
 
   --min-padding: 20px;
+  --scroller-height: 134.7px;
 }
 
 .darkmode {
